# haskell-csound

./: .ghcid  ChangeLog.md  Main.hs  README.md  csound-haskell.cabal  csound.cabal  package.yaml  stack.yaml  tmp.csd
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
